<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.mat.rout.InsulationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        android:weightSum="10">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            app:cardBackgroundColor="@color/white">

            <Button
                android:id="@+id/btnIns1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3.3"
                android:backgroundTint="@color/custombuttom_color"
                android:text="@string/mat_rout_ins1"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            app:cardBackgroundColor="@color/white">

            <Button
                android:id="@+id/btnIns2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3.3"
                android:backgroundTint="@color/custombuttom_color"
                android:text="@string/mat_rout_ins4"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            app:cardBackgroundColor="@color/white">

            <Button
                android:id="@+id/btnIns3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3.3"
                android:backgroundTint="@color/custombuttom_color"
                android:text="@string/mat_rout_ins3"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            app:cardBackgroundColor="@color/white">

            <Button
                android:id="@+id/btnIns4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3.3"
                android:backgroundTint="@color/custombuttom_color"
                android:text="@string/mat_rout_ins2"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            app:cardBackgroundColor="@color/white">

            <Button
                android:id="@+id/btnIns5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3.3"
                android:backgroundTint="@color/custombuttom_color"
                android:text="@string/mat_rout_ins5"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</FrameLayout>